--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -18,13 +18,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Current date 
-        run: |
-          echo date
+        run: echo date
 
 jobs:
   show_dir:
     runs-on: ubuntu-20.04
     steps:
       - name: Current dir
-        run: |
-          echo ls -l
+        run: echo ls -l
