--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,12 +13,12 @@ jobs:
         run: |
           echo "Hello World!"
   show_date_job:
-    runs-on: ubuntu-20.04
     steps:
       - name: Current date 
-        run: echo date
+        run: |
+          echo date
   show_dir:
-    runs-on: ubuntu-20.04
     steps:
       - name: Current dir
-        run: echo ls -l
+        run: | 
+          echo ls -l
