--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,12 +12,14 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+
   show_date_job:
     steps:
       - name: Current date 
         run: |
           echo date
-  show_dir:
+
+  show_dir_job:
     steps:
       - name: Current dir
         run: | 
