--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,7 +14,7 @@ jobs:
           echo "Hello World!"
       - name: Current date 
         run: |
-          echo date
+          date
       - name: Current dir
         run: | 
-          echo ls -l
+          ls -l
